code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

20-Aug-2012 Rouven Weßling
 + Add setup for unit testing. Thanks Michael.

20-Aug-2012 Jean-Marie Simonet
 # [#28943] *Allowing to disable admin menu bar collapse (Isis)
 # [#28947] Handle submenu rendering as a module again. Thanks Rouven

18-Aug-2012 Jean-Marie Simonet
 # [#28929] *Frontend editing tabs does not work. Thanks Peter.
 # [#28932] *Simplifying sample data install on 3.0 alpha2

-------------------- 3.0 Alpha 2 Release [16-Aug-2012] ------------------

16-Aug-2012 Mark Dexter
 # [#28927] Update sample data files for protostar and isis. Thanks Elin.

16-Aug-2012 Jean-Marie Simonet
 # [#28925] Change the variable name on the submenu rendering to avoid conflicts. Thanks Andrea.
 # [#28926] Add Isis and Protostar to mysql/joomla.sql. Thanks Elin.
 # Fix installation languages issue. Thanks Roberto

16-Aug-2012 Rouven Weßling
 ^ Reduce use of JFolder and deprecated JRequest methods.
 ^ Merge latest platform (c77f323d339b7dcfb305325c48a38813322dd69d)

15-Aug-2012 Jean-Marie Simonet
 + Porting to master Installing Language packs from Extension Manager. Thanks Javier and Rouven
 #^ [#28918] Abstract FinderIndexer class for improved database support. Thanks Michael

15-Aug-2012 Rouven Weßling
 #+ [#28032] Split mod_login into two layouts

11-Aug-2012 Jean-Marie Simonet
 $+ Adding Vietnamese vi-VN to installation languages

11-Aug-2012 Jean-Marie Simonet
 #+ [#25295] Email exposed through RSS and Atom feeds. Thanks Elin and Peter
 # [#28795] mod_articles_category "read more" truncation not functioning properly. Thanks Elin.
 ^ [#28374] Deprecate MediaHelper::parseSize() and use JHtmlNumber::bytes() to process file size in Media Manager. Thanks Michael.
 + [#28902] Add CLI to remove files that weren't removed at update. Thanks Michael

10-Aug-2012 Rouven Weßling
 ^ Reduce use of deprecated JDatabase and JRequest methods.