@@ -32,6 +32,7 @@ class FinderViewIndexer extends JViewLegacy
 		JHtml::_('behavior.framework');
 		JHtml::stylesheet('com_finder/indexer.css', false, true, false);
 		JHtml::script('com_finder/indexer.js', false, true);
+		JHtml::_('script', 'system/progressbar.js', true, true);
 
 		parent::display();
 	}
