@@ -32,6 +32,7 @@ $ -> Language fix or change
 20-Aug-2012 Jean-Marie Simonet
  # [#28943] *Allowing to disable admin menu bar collapse (Isis)
  # [#28947] Handle submenu rendering as a module again. Thanks Rouven
+ # [#28942] Use bootstrap markup in Fx.Progressbar; Use Fx.Progressbar in Finder. Thansk Rouven.
 
 18-Aug-2012 Jean-Marie Simonet
  # [#28929] *Frontend editing tabs does not work. Thanks Peter.
